removed old comments, removed two unneded attributes

--- a/roles/webapp/tasks/main.yml
+++ b/roles/webapp/tasks/main.yml
@@ -38,17 +38,6 @@
     path: /tmp/webapp_owncloud
     name: g3/owncloud
 
-    #- name: build Docker image
-    #command: docker build -t g3/owncloud /tmp/webapp_owncloud
-
-#- name: remove old container for idempotence ### necessario ver se existe antes! pode valer a pena usar
-#  #plugins ansible
-#  shell: docker container rm owncloud_webapp
-#
-  # delete container before ###check if container is runing: idempotence?
-  # we chose not to use an ansible plugin because it could run: it complained
-  # about docker-py not being installed, even though it is
-
 - name: run docker container in port 80
   docker_container:
           name: owncloud_webapp
@@ -59,22 +48,13 @@
             - 80:80
           image: g3/owncloud 
           detach: false
-  async: 3
-  poll: 0
-
-#- name: run docker container in port 80
-#  shell: docker run --name="owncloud_webapp" -v /var/owncloud_data:/var/www/data -v /var/owncloud_config:/var/www/html/config -p 80:80 g3/owncloud 
-#  async: 3
-#  poll: 0
-#
-  # verificar se tem o ficheiro initialized (ou o ficheiro config), se tiver, nao replicar
 
 - name: Check if the configuration files exist
   stat:
      path: /var/owncloud_config/config.php
   register: stat_result
 
-- name: execute initialization do
+- name: Configures owncloud if not initialized
   shell: docker exec owncloud_webapp sudo -u www-data php occ maintenance:install \
         --database "mysql" \
         --database-host "{{ master_db }}" --database-name "owncloud" \
