not necessary to install docker compose

--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -22,10 +22,10 @@
     - docker-ce
 #    - nfs-common
 
-- name: download and install docker-compose
-  get_url: 
-        url: https://github.com/docker/compose/releases/download/1.16.1/docker-compose-linux-x86_64 
-        dest: /usr/local/bin/docker-compose
-        mode: u+x
-
+#- name: download and install docker-compose
+#  get_url: 
+#        url: https://github.com/docker/compose/releases/download/1.16.1/docker-compose-linux-x86_64 
+#        dest: /usr/local/bin/docker-compose
+#        mode: u+x
+#
 
